--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,7 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div id="flyblog_navbar">
+            <div id="huxblog_navbar">
                 <div class="navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -49,7 +49,7 @@
         // in high-perf jank-free CSS3 implementation
         var $body = document.body;
         var $toggle = document.querySelector('.navbar-toggle');
-        var $navbar = document.querySelector('#flyblog_navbar');
+        var $navbar = document.querySelector('#huxyblog_navbar');
         var $collapse = document.querySelector('.navbar-collapse');
 
         var __HuxNav__ = {
